--- a/index.html
+++ b/index.html
@@ -1,1 +1,107 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lifestyle Freedom Coach by Nihal</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+      background: #f4f4f4;
+      color: #333;
+    }
+    header {
+      background: black;
+      color: gold;
+      padding: 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 28px;
+    }
+    .tagline {
+      font-size: 16px;
+      margin-top: 5px;
+      color: white;
+    }
+    nav {
+      background: gold;
+      padding: 10px;
+      text-align: center;
+    }
+    nav a {
+      color: black;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    section {
+      padding: 40px 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+    h2 {
+      color: black;
+      margin-bottom: 15px;
+    }
+    footer {
+      background: black;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      margin-top: 20px;
+    }
+    .btn {
+      display: inline-block;
+      background: gold;
+      color: black;
+      padding: 10px 20px;
+      margin-top: 15px;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
 
+  <header>
+    <h1>Lifestyle Freedom Coach by Nihal</h1>
+    <p class="tagline">Helping Malayali men & women achieve financial freedom</p>
+  </header>
+
+  <nav>
+    <a href="#about">About</a>
+    <a href="#opportunity">Business Opportunity</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I am Nihal, a Lifestyle Freedom Coach. My mission is to guide Malayali men and women to achieve financial freedom and wellness through trusted business opportunities.</p>
+  </section>
+
+  <section id="opportunity">
+    <h2>Business Opportunity</h2>
+    <p>Join my community and discover life-changing opportunities that can transform your lifestyle. Learn how to build financial stability, achieve personal growth, and enjoy freedom.</p>
+    <a href="#contact" class="btn">Get Started</a>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>📍 Location: Calicut, Kerala</p>
+    <p>📞 Phone: +91 8089154106</p>
+    <p>✉️ Email: nihallifestylefreedomcoach@gmail.com</p>
+    <p>🌐 Website: www.nihallifestyle.com</p>
+  </section>
+
+  <footer>
+    <p>© 2025 Lifestyle Freedom Coach by Nihal | All Rights Reserved</p>
+  </footer>
+
+</body>
+</html>
