--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
   </style>
 </head>
 <body>
+  <header style="text-align:center; padding:20px; background:black;">
+    <img src="logopng.jpg" alt="Coach Nihal Logo" 
+         style="width:150px; height:auto; margin-bottom:10px;">
+    <h1 style="color:gold;">Lifestyle Freedom Coach by Nihal</h1>
+    <p class="tagline" style="color:white;">
+      Helping Malayali men & women achieve financial freedom
+    </p>
+  </header>
 
   <header>
     <h1>Lifestyle Freedom Coach by Nihal</h1>
